ratings/k8s/ratings-ingress_no_helm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx # Bind with ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Send /star/2 to backend
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
spec:

  # ถ้า Domain ที่เข้ามา = host และใช้ HTTP protocol
  # และมี Path = /ratings/... ถ้าตรงตาม Rules
  # จะเข้าสู่ Backend -> Service
  rules:
    - host: bookinfo.dev.opsta.net # ขึ้นอยู่กับ domain ที่เราใช้งาน
    # - host: xxx.xxx.xxx.xxx.nip.io # nip.io reslove IP to Domain
      http:
        paths:
          - path: /ratings(/|$)(.*) 
            # Regular expression
            # http://bookinfo.dev.opsta.net/ratings/star/2
            # (/)(star/2) --> rewrite target according above
            pathType: Prefix        # If prefix by /ratings
            backend:
              service:
                name: bookinfo-dev-ratings # must match with service.metadata.name
                port:
                  number: 9080
